[package]
name = "argon2-cloudflare"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
worker = "^0.7"

[profile.release]
lto = true
strip = true
codegen-units = 1
